# nvCOMP_Project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  QtUI_Prompts.txt  QtUI_Prompts_task1.txt  QtUI_Prompts_task2.txt  QtUI_Prompts_task2_2_complete.txt  QtUI_Prompts_task3.txt  QtUI_Prompts_task4.txt  QtUI_Prompts_task5.txt  Qt_UI_PLAN.md  README.md  main.cu  refresh_desktop_integration.sh
core/include/: nvcomp_c_api.h  nvcomp_core.hpp
core/src/: archive.cpp  nvcomp_c_api.cpp  nvcomp_core.cu  nvcomp_cpu.cpp  volume.cpp
gui/: CMakeLists.txt  INSTALL_QT6.md  QUICKSTART_QT.md  README.md
gui/resources/: create_icon.py  generate_archive_icons.py  generate_icons.py  nvcomp.qrc  nvcomp.rc
gui/src/: archive_viewer.cpp  archive_viewer.h  compression_worker.cpp  compression_worker.h  gpu_monitor.cpp  gpu_monitor.h  main.cpp  mainwindow.cpp  mainwindow.h  progress_widget.cpp  progress_widget.h  settings_dialog.cpp  settings_dialog.h
gui/tests/: test_mainwindow.cpp
gui/ui/: archive_viewer.ui  mainwindow.ui  settings_dialog.ui
platform/linux/: .gitignore  CMakeLists.txt  DEBIAN_PACKAGING.md  FILE_MANAGER_TESTING.md  README.md  build_deb.sh  desktop_integration.cpp  desktop_integration.h  final_context_menu_test.sh  install_file_manager_integration.sh  nautilus_extension.py  nemo_script.sh  reinstall_and_test.sh  test_nautilus_extension.py
platform/windows/: README.md  clear_icon_cache.bat  context_menu.cpp  context_menu.h  file_associations.cpp  file_associations.h
platform/windows/installer/: QUICK_REFERENCE.md  README.md  build_installer.bat  check_prerequisites.bat  components.wxs  generate_installer_images.py  installer.wxs  license.rtf  product.wxi  ui.wxs
unit_test/: sample.txt  test.bat  test.sh  test_folder.bat  test_folder.sh  test_volume.bat  test_volume.sh
unit_test/sample_folder/PineTools.com_files/: 1  10  2  3  4  5  6  7  8  9
